2017-11-13 Philipp Klaus Krause <pkk AT spth.de>

	* Merged nothorup branch to trunk.

2017-11-13 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCtree_dec.hpp:
	  Document choice of algorithm for tree-decomposition.

2017-11-13 Philipp Klaus Krause <pkk AT spth.de>

	* configure.ac,
	  src/SDCCtree_dec.hpp,
	  sdccconf_in.h,
	  configure:
	  Automatically use gala for treedec.
	  
2017-11-12 Philipp Klaus Krause <pkk AT spth.de>

	* sdccconf_in.h:
	  Regenerate to get correct definitions from configuration.

2017-11-08 Philipp Klaus Krause <pkk AT spth.de>

	* configure,
	  configure.ac,
	  src/SDCClospre.cc,
	  src/SDCClospre.hpp,
	  src/SDCCnaddr.cc,
	  src/SDCCnaddr.hpp,
	  src/SDCCralloc.hpp,
	  src/SDCCtree_dec.hpp,
	  src/hc08/ralloc2.cc,
	  src/stm8/ralloc2.cc,
	  src/z80/ralloc2.cc:
	  Detect and use treedec when available, fall back to Thorup otherwise.

2017-11-08 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCClospre.cc,
	  src/SDCClospre.hpp,
	  src/SDCCnaddr.cc,
	  src/SDCCnaddr.hpp,
	  src/SDCCralloc.hpp,
	  src/SDCCtree_dec.hpp,
	  src/hc08/ralloc2.cc,
	  src/stm8/ralloc2.cc,
	  src/z80/ralloc2.cc:
	  tdlib to treedec rename.

2017-11-07 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCglobl.h,
	  src/SDCCglue.c,
	  src/SDCCmain.c,
	  src/z80/main.c:
	  Implement --data-seg, part of RFE #544.

2017-11-07 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c,
	  src/z80/peeph-gbz80.def,
	  support/regression/tests/longlong.c,
	  support/regression/tests/gcc-torture-execute-20001108-1.c,
	  support/regression/tests/gcc-torture-execute-20011126-1,
	  support/regression/tests/gcc-torture-execute-20041011-1.c,
	  support/regression/tests/gcc-torture-execute-20080529-1.c,
	  support/regression/tests/gcc-torture-execute-20120817-1.
	  support/regression/tests/gcc-torture-execute-920829-1.c,
	  support/regression/tests/gcc-torture-execute-950511-1.c,
	  support/regression/tests/gcc-torture-execute-961213-1.c,