@@ -3117,9 +3117,10 @@ genSend (set * sendSet)
                     {
                       const char *l = aopGet (IC_LEFT (sic), offset, FALSE, FALSE);
                       if (!EQ (l, fReturn[offset]))
-                        {
+                        if (fReturn[offset][0] == 'r' && (AOP_TYPE (IC_LEFT (sic)) == AOP_REG || AOP_TYPE (IC_LEFT (sic)) == AOP_R0 || AOP_TYPE (IC_LEFT (sic)) == AOP_R1)) 
+                          emitcode ("mov", "a%s,%s", fReturn[offset], l); // use regsiter's direct address instead of name
+                        else
                           emitcode ("mov", "%s,%s", fReturn[offset], l);
-                        }
                       offset++;
                     }
                 }
@@ -4487,8 +4488,8 @@ genRet (iCode * ic)
             {
               const char *l = aopGet (IC_LEFT (ic), offset, FALSE, FALSE);
               if (!EQ (fReturn[offset], l))
-                if (fReturn[offset][0] == 'r' && AOP_TYPE (IC_LEFT (ic)) == AOP_REG)
-                  emitcode ("mov", "%s,a%s", fReturn[offset], l); // use regsiter's direct address instead of name
+                if (fReturn[offset][0] == 'r' && (AOP_TYPE (IC_LEFT (ic)) == AOP_REG || AOP_TYPE (IC_LEFT (ic)) == AOP_R0 || AOP_TYPE (IC_LEFT (ic)) == AOP_R1)) 
+                  emitcode ("mov", "a%s,%s", fReturn[offset], l); // use regsiter's direct address instead of name
                 else
                   emitcode ("mov", "%s,%s", fReturn[offset], l);
               if (size && !strcmp(fReturn[offset], "a") && aopGetUsesAcc (IC_LEFT (ic), offset+1))
